tests/snapshots/test_runner__tests__compiler__typecheck__case_exhaustiveness_enum_2.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
enum List<T> {
  Nil,
  Cons({head: T, tail: List<T>})
}

{
  let bomb = list =>
    switch (list) {
      case Nil: true
      case Cons({head: true, tail: _}): true
    }
}

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/case_exhaustiveness_enum_2.kk:8:5
  │
8 │     switch (list) {
  │     ^^^^^^ Non-exhaustive cases
  │
  = Missing case(s):

      case Cons({ head: false, tail: _ }):
